scripts/ingress/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      nodePort: 30080
    - port: 443
      name: https
      nodePort: 30443
  selector:
    app.kubernetes.io/name: ingress-nginx
