scripts/ingress/jackhttpd-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackhttpd-headless
spec:
  ports:
   - port: 80
     targetPort: 80
  type: ClusterIP
  clusterIP: None
  selector:
    app: jackhttpd
