scripts/ingress/jackhttpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackhttpd
spec:
  ports:
   - port: 80
     targetPort: 80
  type: NodePort
  selector:
    app: jackhttpd
