scripts/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackhttpd
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jackhttpd.io
    http:
      paths:
      - path:
        backend:
          serviceName: jackhttpd
          servicePort: 80
